backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loja-veloz
  labels:
    project: loja-veloz
    environment: development
