backend/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loja-veloz-api
  namespace: loja-veloz
  labels:
    app: loja-veloz-api
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: loja-veloz-api

  template:
    metadata:
      labels:
        app: loja-veloz-api

    spec:
      containers:
        - name: api
          image: backend-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
