backend/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loja-veloz-api
  namespace: loja-veloz
spec:
  type: NodePort
  selector:
    app: loja-veloz-api
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
