backend/k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loja-veloz-api-ingress
  namespace: loja-veloz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: loja-veloz.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loja-veloz-api
                port:
                  number: 3000
